public/css/style.scss
/* ... */
.photo-caption-title {

	text-transform: uppercase;
	font-weight: bold;
	font-size: 2rem;
	margin-bottom: 10px;
	line-height: 2rem;

	@include breakpoint(medium) {

		font-size: 1.7rem;

	}

}

.photo-caption-description {

	font-size: 1rem;
	font-weight: 600;

}

.machine-photo-info-container {

	@extend .photo-caption;
	bottom: 8%;
	bottom:8vh;
	width:40%;

	@include breakpoint(large) {

		width:50%;

	}

	@include breakpoint(medium) {

		width:100%;

	}

}

.machine-photo-diagram {

	height:12%;
	height:12vh;
	float:left;

	@include breakpoint(medium) {

		height:10%;
		height:10vh;

	}

}

.machine-photo-text-container {

	width:70%;
	float:left;
	margin-left: 20px;

	@include breakpoint(tablet) {

		width:100%;

	}

	@include breakpoint(medium) {

		width:100%;
		margin-left: 0;

	}

}

.machine-photo-title {

	@extend .photo-caption-title;
	margin-bottom: 3px;
	margin-top: 7px;



}

.machine-photo-description {

	text-transform: uppercase;
	font-weight: bold;

}



.contact {

	position: relative;
	height:100%;
	height:100vh;
	width:100%;
	width:100vw;
	background-color: #e7e9ea;

	.container {

		position: relative;

	}


	@include breakpoint(medium) {

		// height:;
		background-color: $dark;

	}

}

.contact-fixed-container {

	position: fixed;
	height:100%;
	height:100vh;
	width:100%;
	width:100vw;
	top:0;

	& > .team-outer-container {

		@include center;
		top:48%;

		@include breakpoint(tablet) {

			width:100%;

		}

		@include breakpoint(medium) {

			@include uncenter;
			display: none;

		}

	}

	& > .contact-info-outer-container {

		margin-top: 15vh;

		@include breakpoint(tablet) {

			margin-top: 0;
			@include box-sizing(border-box);
			padding-top:90px;
			// padding-bottom: 40px;

		}

	}

	@include breakpoint(tablet) {

		position: static;
		height:auto;

	}

	@include breakpoint(medium) {

		position: static;
		height:auto;

	}

}

.contact-info {

	// position: absolute;
	position: relative;
	width:100%;
	z-index: 1;
	color:$dark;

	p {
		float:left;
	}

	.button {

		background-color: $dark;
		color:white;
		float:right;

	}

	a {

		float:right;
		text-transform: uppercase;
		position: relative;
		@include transition(transform .3s);
		// overflow: hidden;

		&:before {

			top:100%;
			position: absolute;
			content: attr(data-hover);
			text-transform: uppercase;
			color:$dark;
			font-size: .95rem;
			@include transition(transform .3s);
		}

		&:hover {

			@include transform(translate(0, -100%));

			&:before {

				@include transform(translate(0, 0));

			}

		}

	}

}

.footer {

	position: absolute;
	bottom: 0;
	width:100%;
	background-color: $dark;
	height:20%;
	height:20vh;


	.container {

		@include center;
		overflow: visible;

		@include breakpoint(medium) {

			position: static;
			@include transform(translate(0,0));

		}

	}

	@include breakpoint(medium) {

		height:auto;
		// height:100%;
		// position: static;
		@include box-sizing(border-box);
		padding:30px 20px;


	}

}


.address {

	font-family: $gotham;
	color:white;
	float:left;
	font-size: 1.9rem;
	font-weight: bold;
	text-transform: uppercase;
	line-height: 2rem;

	@include breakpoint(tablet) {

		font-size: 1.5rem;

	}

	@include breakpoint(medium) {

		float:none;
		margin:10px 0;
		font-size: 2rem;

	}



}

.info {
	position: relative;
	float:right;
	text-align: right;
	color:white;
	font-size: .9rem;
	overflow: visible;

	a {
		color:white;
		
		&:hover {

			text-decoration: underline;

		}

	}

	table {

		// width:100%;
		float:right;

		@include breakpoint(medium) {

			float:none;

		}

	}

	td {

		text-align: right;

		&:first-child {

			padding-right: 10px;

		}

	}

	@include breakpoint(tablet) {

		font-size: .7rem;

	}

	@include breakpoint(medium) {

		float:none;
		text-align: left;
		margin:30px 0;
		font-size: 1.2rem;

	}

}

.parts-images-container {

	width:100%;
	position: relative;

}

.parts-images-column {

	position: relative;
	width:33.33%;
	@include box-sizing(border-box);
	padding-right: 15px;
	float:left;

	&:nth-child(2) {

		@include breakpoint(medium) {

			display: none;

		}

	}

	&:nth-child(3) {

		@include breakpoint(medium) {

			display: none;

		}

	}

	@include breakpoint(medium) {

		width:100%;
		padding-left: 15px;
		float:none;

	}

}

.pacific-parts-images-column {

	@extend .parts-images-column;

	width:16.6666%;

	@include breakpoint(medium) {

		width:100%;

		/* Show first and second column at medium screen sizes and smaller */
		&:not(:first-child):not(:nth-child(2)) {

			// display: none;

		}		
	}

}


.parts-image-container {

	position: relative;
	background-color: #fbfbfb;
	width:100%;
	margin-bottom: 15px;
	overflow: hidden;
	@include perspective(1000px);
	@include transform-style(preserve-3d);
	@include transform-origin(center center);

}

.parts-image-caption {

	position: absolute;
	bottom: 10px;
	left:10px;
	color:$light;
	font-size: .7rem;
	width:90%;

	@include breakpoint(tablet) {

		font-size: .6rem;

	}

	@include breakpoint(medium) {

		font-size: .8rem;

	}

}

.parts-image-centerer {

	@include center;
	width:100%;

}

.parts-image {

	position: relative;	
	z-index: 1;
	width:100%;
	@include transition(all 1s ease-out);
	@include transform-origin(center center);
	@include backface-visibility(hidden);

	&:hover {

		@include transform(scale(1.2));
		@include transition(all 3s ease-out);

	}

}

.vendor-container {

	@extend .photo-container;

	.container {

		@include box-sizing(border-box);
		padding-top: 12%;
		padding-top: 12vh;

	}

	@include breakpoint(medium) {

		height:auto;

	}

}

.vendor-info {

	width:37%;
	color:white;
	text-transform: uppercase;
	font-size: 1.1rem;
	float:left;

	&.first {

		font-size: 1.3rem;
		line-height: 1.4rem;

		@include breakpoint(tablet) {

			font-size: 1rem;

		}

	}

	@include breakpoint(tablet) {

		width:50%;
		font-size: .8rem;

	}

	@include breakpoint(medium) {

		width:100%;
		float:none;
		margin-top: 20px;

	}

}
/* ... */

